[gd_scene load_steps=7 format=3 uid="uid://142tygt4ieye"]

[ext_resource type="Script" uid="uid://dsjst81c2oxmv" path="res://Scripts/Player/Player.gd" id="1_yv4bl"]
[ext_resource type="AudioStream" uid="uid://cibm53tn0gnfe" path="res://Audio/Sound/Laser_Shoot.wav" id="2_2wdhv"]
[ext_resource type="PackedScene" uid="uid://dg3o42nxcm1a0" path="res://Scenes/Player/Player_body_improved.tscn" id="2_108rj"]
[ext_resource type="PackedScene" uid="uid://ctbq18ipo4hje" path="res://Scenes/UI/Button_UI.tscn" id="3_2gfn8"]
[ext_resource type="PackedScene" uid="uid://cle5aclnyr280" path="res://Scenes/UI/Player_UI.tscn" id="3_in8md"]
[ext_resource type="PackedScene" uid="uid://dcixur6fqo43g" path="res://Scenes/UI/Pause_UI.tscn" id="4_b472g"]

[node name="Player" type="Node2D" node_paths=PackedStringArray("player_body", "player_UI", "player_camera", "activation_button", "timer_after_death", "timer_ammo")]
script = ExtResource("1_yv4bl")
player_body = NodePath("PlayerBody")
player_UI = NodePath("UI/Player_UI")
player_camera = NodePath("PlayerBody/Camera2D")
activation_button = NodePath("PlayerBody/Button_UI")
timer_after_death = NodePath("Timer_after_death")
time_before_restart = 2.0
transition_time = 0.5
ammo_regeneration = true
timer_ammo = NodePath("PlayerBody/Timer_ammo")
time_for_ammo_regeneration = 2.5
sounds = Array[AudioStream]([ExtResource("2_2wdhv")])

[node name="PlayerBody" parent="." instance=ExtResource("2_108rj")]

[node name="Timer_ammo" type="Timer" parent="PlayerBody"]

[node name="Camera2D" type="Camera2D" parent="PlayerBody"]
limit_left = 0
limit_top = 0
limit_bottom = 1080
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_vertical_enabled = true
drag_top_margin = 0.05
drag_bottom_margin = 0.7
editor_draw_limits = true

[node name="Button_UI" parent="PlayerBody" instance=ExtResource("3_2gfn8")]
visible = false
position = Vector2(0, -48)
cur_button = "R"
label_shadow_color = Color(0.839216, 0.270588, 0.270588, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Player_UI" parent="UI" node_paths=PackedStringArray("pause_UI") instance=ExtResource("3_in8md")]
process_mode = 3
anchors_preset = -1
progress_bar_HP_color = Color(1, 0.278431, 0.278431, 1)
pause_UI = NodePath("../Pause_UI")
metadata/_edit_lock_ = true

[node name="Teleport_transition" type="ColorRect" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -600.0
offset_top = -48.0
offset_right = 2720.0
offset_bottom = 1112.0
mouse_filter = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Pause_UI" parent="UI" instance=ExtResource("4_b472g")]
visible = false
label_shadow_color = Color(0.839216, 0.270588, 0.270588, 1)
progress_bar_bg_color = Color(1, 0.231373, 0.243137, 1)

[node name="Transition" type="CanvasLayer" parent="."]
layer = 7

[node name="Transition" type="ColorRect" parent="Transition"]
z_index = 1470
anchors_preset = -1
anchor_top = -0.377778
anchor_bottom = 0.155556
offset_left = -1432.0
offset_top = -24.0
offset_right = 3624.0
offset_bottom = 1136.0
mouse_filter = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Timer_after_death" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer_sound" type="AudioStreamPlayer" parent="."]
bus = &"Sound"

[connection signal="ammo_changed" from="PlayerBody" to="UI/Player_UI" method="_set_ammo"]
[connection signal="got_hit" from="PlayerBody" to="UI/Player_UI" method="_set_hp"]
[connection signal="hp_refill_change" from="PlayerBody" to="UI/Player_UI" method="_on_player_body_hp_refill_change"]
[connection signal="now_dead" from="PlayerBody" to="." method="_on_player_body_now_dead"]
[connection signal="use_weapon" from="PlayerBody" to="." method="_on_player_body_use_weapon"]
[connection signal="weapon_changed" from="PlayerBody" to="UI/Player_UI" method="_on_player_body_weapon_changed"]
[connection signal="timeout" from="PlayerBody/Timer_ammo" to="." method="_on_timer_ammo_timeout"]
[connection signal="timeout" from="Timer_after_death" to="." method="_on_timer_after_death_timeout"]
